# IATI-Project-Location-Standard

./: .gitignore  AGENTS.MD  README.md  build-docs.sh  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: IATI_project_core_schema_.json  SUMMARY.md  annex1.md  annex2.md  chapter_1.md  collection.md  data_model.md  faqs.md  introduction.md
docs/assets/excels/: ALocation_Types_List_Proposal_01.csv  IATI_Project_Location_Data_Template_EN_V03.xlsx  Location_Types_List_Proposal_01.csv  Location_Types_List_Proposal_01.md  ToR project location data collection v09.docx
docs/stylesheets/: extra.css
frontend/: package-lock.json  package.json
frontend/src/components/: FileValidator.tsx  MapComponent.tsx  SendMailButton.tsx
model/: project_core_schema_en.json
model/model-docs/: README.md  book.toml
model/model-docs/src/: annex1.md  disclaimer.md  quickstart.md  validation.md
model/schema/: project_core_schema_en.json
